--- a/.github/workflows/publish-helm.yaml
+++ b/.github/workflows/publish-helm.yaml
@@ -42,3 +42,11 @@ jobs:
       - name: 🐳 Push to GitHub Container Registry
         run: |
           helm push serverless-helm-cloudrun-*.tgz oci://ghcr.io/${{ github.repository }}/charts
+          # Make the package public after pushing
+          PACKAGE_NAME=$(basename serverless-helm-cloudrun-*.tgz .tgz)
+          curl -X PATCH \
+            -H "Accept: application/vnd.github+json" \
+            -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
+            -H "X-GitHub-Api-Version: 2022-11-28" \
+            https://api.github.com/orgs/${{ github.repository_owner }}/packages/container/charts%2F${PACKAGE_NAME}/visibility \
+            -d '{"visibility":"public"}'
