--- a/.github/workflows/publish-helm.yaml
+++ b/.github/workflows/publish-helm.yaml
@@ -30,7 +30,7 @@ jobs:
       - name: ☁️ Upload to GitHub Release
         uses: softprops/action-gh-release@v2
         with:
-          files: serverless-helm-cloudrun-*.tgz
+          files: cloudrun-*.tgz
           tag_name: ${{ github.ref_name }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -38,15 +38,6 @@ jobs:
       - name: 🔐 Set up OCI Registry Authentication
         run: |
           echo "${{ secrets.GITHUB_TOKEN }}" | helm registry login ghcr.io -u ${{ github.actor }} --password-stdin
-
       - name: 🐳 Push to GitHub Container Registry
         run: |
-          helm push serverless-helm-cloudrun-*.tgz oci://ghcr.io/${{ github.repository }}/charts
-          # Make the package public after pushing
-          PACKAGE_NAME=$(basename serverless-helm-cloudrun-*.tgz .tgz)
-          curl -X PATCH \
-            -H "Accept: application/vnd.github+json" \
-            -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
-            -H "X-GitHub-Api-Version: 2022-11-28" \
-            https://api.github.com/orgs/${{ github.repository_owner }}/packages/container/charts%2F${PACKAGE_NAME}/visibility \
-            -d '{"visibility":"public"}'
+          helm push cloudrun-*.tgz oci://ghcr.io/${{ github.repository_owner }}
