--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -35,16 +35,18 @@ jobs:
 
       - name: 📥 Checkout Repository
         uses: actions/checkout@v4
-      - name: 🔍 Get Released Components
-        if: ${{ steps.release.outputs.releases_created }}
-        id: get-components
-        run: |
-          PATHS_RELEASED='${{ steps.release.outputs.paths_released }}'
-          echo "paths=$(echo $PATHS_RELEASED | jq -c '.')" >> $GITHUB_OUTPUT
 
-      - name: 🏷️ Setup Git Config
-        if: ${{ steps.release.outputs.releases_created }}
+      - name: 🔖 Tag Major and Minor Versions
+        if: ${{ steps.release.outputs.release_created }}
         run: |
           git config user.name github-actions[bot]
           git config user.email 41898282+github-actions[bot]@users.noreply.github.com
           git remote add gh-token "https://${{ secrets.GITHUB_TOKEN }}@github.com/googleapis/release-please-action.git"
+          git tag -d v${{ steps.release.outputs.major }} || true
+          git tag -d v${{ steps.release.outputs.major }}.${{ steps.release.outputs.minor }} || true
+          git push origin :v${{ steps.release.outputs.major }} || true
+          git push origin :v${{ steps.release.outputs.major }}.${{ steps.release.outputs.minor }} || true
+          git tag -a v${{ steps.release.outputs.major }} -m "Release v${{ steps.release.outputs.major }}"
+          git tag -a v${{ steps.release.outputs.major }}.${{ steps.release.outputs.minor }} -m "Release v${{ steps.release.outputs.major }}.${{ steps.release.outputs.minor }}"
+          git push origin v${{ steps.release.outputs.major }}
+          git push origin v${{ steps.release.outputs.major }}.${{ steps.release.outputs.minor }}
