--- a/release-please-config.json
+++ b/release-please-config.json
@@ -2,6 +2,9 @@
     "$schema": "https://raw.githubusercontent.com/googleapis/release-please/main/schemas/config.json",
     "release-type": "simple",
     "packages": {
+        ".": {
+            "release-type": "simple"
+        },
         "chart": {
             "release-type": "helm",
             "component": "chart"
