--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,20 +1,21 @@
 # See https://pre-commit.com for more information
 # See https://pre-commit.com/hooks.html for more hooks
 repos:
-  - repo: https://github.com/losisin/helm-values-schema-json
-    rev: v1.6.3
-    hooks:
-      - id: helm-schema
-        args: []
-  - repo: local
-    hooks:
-      # - id: helm-schema
-      #   files: ^chart/values\.yaml$
-      #   name: Generate helm schema
-      #   entry: bash -c 'helm schema'
-      #   language: system
-      - id: schema-docs
-        name: Generate schema documentation
-        entry: bash -c 'npx @adobe/jsonschema2md -h false -d chart -o chart/docs'
-        language: system
-        files: ^chart/values\.yaml$
+  []
+  # - repo: https://github.com/losisin/helm-values-schema-json
+  #   rev: v1.6.3
+  #   hooks:
+  #     - id: helm-schema
+  #       args: []
+  # - repo: local
+  #   hooks:
+  #     # - id: helm-schema
+  #     #   files: ^chart/values\.yaml$
+  #     #   name: Generate helm schema
+  #     #   entry: bash -c 'helm schema'
+  #     #   language: system
+  #     - id: schema-docs
+  #       name: Generate schema documentation
+  #       entry: bash -c 'npx @adobe/jsonschema2md -h false -d chart -o chart/docs'
+  #       language: system
+  #       files: ^chart/values\.yaml$
