--- a/release-please-config.json
+++ b/release-please-config.json
@@ -1,50 +1,9 @@
 {
     "$schema": "https://raw.githubusercontent.com/googleapis/release-please/main/schemas/config.json",
-    "release-type": "simple",
-    "packages": {
-        ".": {
-            "release-type": "simple"
-        },
-        "chart": {
-            "release-type": "helm",
-            "component": "chart"
-        },
-        "action": {
-            "release-type": "simple",
-            "component": "action"
-        },
-        "terraform": {
-            "release-type": "terraform-module",
-            "component": "terraform"
-        }
-    },
+    "release-type": "helm",
     "release-as": "0.1.0",
-    "separate-pull-requests": true,
-    "always-update": true,
     "bump-minor-pre-major": true,
-    "include-component-in-tag": true,
+    "include-component-in-tag": false,
     "include-v-in-tag": true,
-    "group-pull-request-title-pattern": "chore: release ${component} v${version}",
-    "changelog-sections": [
-        {
-            "type": "feat",
-            "section": "Features",
-            "hidden": false
-        },
-        {
-            "type": "fix",
-            "section": "Bug Fixes",
-            "hidden": false
-        },
-        {
-            "type": "docs",
-            "section": "Documentation",
-            "hidden": false
-        },
-        {
-            "type": "chore",
-            "section": "Miscellaneous",
-            "hidden": false
-        }
-    ]
+    "group-pull-request-title-pattern": "chore: release ${component} v${version}"
 }
