--- a/release-please-config.json
+++ b/release-please-config.json
@@ -2,6 +2,9 @@
     "$schema": "https://raw.githubusercontent.com/googleapis/release-please/main/schemas/config.json",
     "release-type": "helm",
     "release-as": "0.1.0",
+    "packages": {
+        ".": {}
+    },
     "bump-minor-pre-major": true,
     "include-component-in-tag": false,
     "include-v-in-tag": true,
