--- a/.github/workflows/publish-helm.yaml
+++ b/.github/workflows/publish-helm.yaml
@@ -3,8 +3,8 @@ name: 📦 Publish Helm Chart
 on:
   push:
     tags:
-      - 'chart-v[0-9]+.[0-9]+.[0-9]+'
-      # Matches tags like chart-v1.0.0
+      - 'v[0-9]+.[0-9]+.[0-9]+'
+      # Matches tags like v1.0.0
 
 permissions:
   contents: write
