--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -5,10 +5,10 @@ env:
 
 on:
   workflow_dispatch:
-  # pull_request:
-  #   branches: [main]
-  # push:
-  #   branches: [main]
+  pull_request:
+    branches: [main]
+  push:
+    branches: [main]
 jobs:
   discover:
     name: 🔍 Discover Services
@@ -46,9 +46,7 @@ jobs:
         id: auth
         uses: google-github-actions/auth@v2
         with:
-          token_format: 'access_token'
           workload_identity_provider: ${{ secrets.GCP_WORKLOAD_IDENTITY_POOL }}
-          service_account: ${{ secrets.GCP_SERVICE_ACCOUNT }}
 
       - name: 📜 Template Helmless Chart
         uses: helmless/action@main
