--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -10,6 +10,6 @@ repos:
     hooks:
       - id: schema-docs
         name: Generate schema documentation
-        entry: bash -c 'npx @adobe/jsonschema2md --header false --input . --out docs/cloudrun/schema/'
+        entry: bash ./scripts/generate-schema-docs.sh
         language: system
         files: ^values.schema.json$
